# TMD

./: .gitignore  CMakeLists.txt  README.md
headers/: chat_notebook.hpp  gui_client.hpp  list_frame.hpp  main_frame.hpp  notification.hpp  tamandua_box.hpp  tamandua_textctrl.hpp
src/: chat_notebook.cpp  debug_gui.cpp  gui_client.cpp  list_frame.cpp  main_frame.cpp  notification.cpp  tamandua_textctrl.cpp
ssl/: TamanduaCA.pem  tamandua_approved.crt
